--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# DDD Module: GeoLocation
+conf/config.yaml
+conf/data/test-data.yaml
