--- a/conf/config-sample.yaml
+++ b/conf/config-sample.yaml
@@ -2,7 +2,7 @@
 # Environment
 environment:
   stage: "DEVELOPMENT" # DEVELOPMENT, TEST, STAGING, PRODUCTION
-  runTestEnvironment: ["DEVELOPMENT"]
+  runTestEnvironment: ["LOCAL", "DEVELOPMENT", "TEST"]
 
 # Databases
 databases:
@@ -26,30 +26,6 @@ databases:
     password: "d3ta"
     hostName: "127.0.0.1:3306" # hostname:port OR path
     dbName: "a_d3ta_data"
-    config: "charset=utf8&parseTime=True&loc=Local"
-    maxIdleConns: 10
-    maxOpenConns: 10
-    logMode: true # shoud be "false" on production
-  logDB:
-    connectionName: "db-log"
-    driver: "mysql" # mysql, postgres, sqlserver, sqlite3
-    # mysql
-    username: "d3ta"
-    password: "d3ta"
-    hostName: "127.0.0.1:3306" # hostname:port OR path
-    dbName: "a_d3ta_logs"
-    config: "charset=utf8&parseTime=True&loc=Local"
-    maxIdleConns: 10
-    maxOpenConns: 10
-    logMode: true # shoud be "false" on production
-  emailDB:
-    connectionName: "db-email"
-    driver: "mysql" # mysql, postgres, sqlserver, sqlite3
-    # mysql
-    username: "d3ta"
-    password: "d3ta"
-    hostName: "127.0.0.1:3306" # hostname:port OR path
-    dbName: "a_d3ta_email"
     config: "charset=utf8&parseTime=True&loc=Local"
     maxIdleConns: 10
     maxOpenConns: 10
